<resources>
    <string name="app_name">Notecase</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="view_costs">view costs</string>
    <string name="add_costs">add costs</string>
    <string name="manage_categories">Manage categories</string>
    <string name="CommodityName">Enter name...</string>
    <string name="CommodityPrice">Enter price...</string>

    <string name="move">move</string>
    <string name="save">save</string>

    <string name="category_food">FOOD</string>
    <string name="category_transport">TRANSPORT</string>
    <string name="category_accommodation">ACCOMMODATION</string>
    <string name="category_travel">TRAVEL</string>
    <string name="category_dinner">DINNER</string>
    <string name="category_other">OTHER</string>

    <string name="add_new_category">Add Category</string>
    <string name="servlet_client_id">1062930196155-uno4j21qb2akk7eojrueek4f0evb89m5.apps.googleusercontent.com</string>

    <string name="add_new_user">You can share you data with friends. Just add any gmail account below:</string>
    <string name="user_name">name</string>
    <string name="user_email">email</string>
</resources>
