<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/commodityName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:hint="@string/CommodityName"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/commodityPrice"
            android:singleLine="true" />

        <EditText
            android:id="@+id/commodityPrice"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:hint="@string/CommodityPrice"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <Button
            android:id="@+id/move_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_category_block"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center_vertical"
        android:orientation="vertical"
        android:weightSum="5">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/right_category_block"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|end|right"
        android:orientation="vertical">

    </LinearLayout>
</RelativeLayout>
